feat: implement CV download functionality and enhance file handling